jS-Strict-Mode/Examples/example8.js
// Duplicating a parameter name is not allowed
"use strict";
function x(p1, p1) { }; 
// SyntaxError: Duplicate parameter name not allowed in this context